# nft_staking_k

./: Anchor.toml  README.md  out.txt  package-lock.json  package.json  txtx.yml
programs/nft_staking_k/: Cargo.toml
programs/nft_staking_k/src/: error.rs  lib.rs
programs/nft_staking_k/src/instructions/: create_collections.rs  initialize.rs  mint_asset.rs  mod.rs  stake.rs  unstake.rs
programs/nft_staking_k/src/state/: config.rs
programs/nft_staking_k/tests/: test_initialize.rs
runbooks/: README.md
runbooks/deployment/: main.tx
tests/: anchor-core-staking.ts
