[package]
name = "nft_staking_k"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_staking_k"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = {version="0.31.1", features=["init-if-needed"]}
anchor-spl= "0.31.1"
mpl-core = { version = "0.11.2", features = ["anchor"] }

[dev-dependencies]
litesvm = "0.12.0"
anchor-litesvm = "0.4.0"
tokio = { version = "1", features = ["full"] }
solana-sdk = "4.0.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1